formance-sandbox/08-middleware-ledger-auth.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: auth-middleware
  namespace: nw-sandbox
spec:
  basicAuth:
    secret: basic-auth-secret
