formance-sandbox/02-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: formance-gateway
  namespace: nw-sandbox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: formance-gateway
  template:
    metadata:
      labels:
        app: formance-gateway
    spec:
      hostAliases:
        - ip: "10.43.208.33"
          hostnames:
            - "formance.internal"
      containers:
        - name: formance-gateway
          image: ghcr.io/formancehq/gateway:v2.0.31
          ports:
            - containerPort: 8080
            - containerPort: 8443
          volumeMounts:
            - name: caddyfile
              mountPath: /etc/caddy/Caddyfile
              subPath: Caddyfile
      volumes:
        - name: caddyfile
          configMap:
            name: caddy-config

---
apiVersion: v1
kind: Service
metadata:
  name: formance-gateway-svc
  namespace: nw-sandbox
spec:
  selector:
    app: formance-gateway
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8080
