formance-sandbox/03-console.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: formance-console
  namespace: nw-sandbox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: formance-console
  template:
    metadata:
      labels:
        app: formance-console
    spec:
      containers:
        - name: console
          image: ghcr.io/formancehq/console-v3:v2.2.1
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: formance-console-svc
  namespace: nw-sandbox
spec:
  selector:
    app: formance-console
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 3000
