formance-sandbox/04-flows-wallets.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: formance-wallets
  namespace: nw-sandbox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: formance-wallets
  template:
    metadata:
      labels:
        app: formance-wallets
    spec:
      containers:
        - name: formance-wallets
          image: ghcr.io/formancehq/wallets:v2.1.5
          args:
            - serve
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: gateway-ca
              mountPath: /etc/ssl/gateway
              readOnly: true
      volumes:
        - name: gateway-ca
          configMap:
            name: gateway-ca-cert

---
apiVersion: v1
kind: Service
metadata:
  name: formance-wallets
  namespace: nw-sandbox
spec:
  selector:
    app: formance-wallets
  ports:
    - port: 8080
      targetPort: 8080
