formance-sandbox/06-ingress-gateway.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: formance-gateway-ingress
  namespace: nw-sandbox
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: nw-sandbox-auth-middleware@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: formanceapi.intra.netwallet.sandbox # Your external domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: formance-gateway-svc # Points to the Service above
                port:
                  number: 80
